gradle: Update JVM args to show GC pauses alone